# PharmSearch-UZ

./: .env.example  .env.local  .gitignore  .replit  01_LOYIHA_UMUMIY_KORINISHI.md  02_ARXITEKTURA.md  03_TEXNOLOGIYALAR_STEKI.md  04_MALUMOTLAR_BAZASI.md  05_AI_MODUL.md  06_API_SPETSIFIKATSIYASI.md  07_REPLIT_AGENT_PROMPTLARI.md  README.md  pyproject.toml  replit.md  setup.sh
backend/: main.py
backend/ai/: fuzzy_matcher.py  medicine_dictionary.json  speech_to_text.py  text_normalizer.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  0ddab6d0c3ff_initial_tables.py
backend/api/: auth.py  search.py
backend/core/: config.py  security.py
backend/db/: database.py  models.py  schemas.py  seed.py
backend/search/: google_search.py  gopharm_search.py  pipeline.py  schemas.py
backend/tests/: conftest.py  test_health.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: NavBar.tsx  ResultCard.tsx
frontend/lib/: api.ts
