[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "openai-whisper>=20250625",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
