[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pharmsearch-uz"
version = "0.1.0"
description = "Uzbek Pharmacy Voice Search System"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Behruz Ismatullayev", email = "behruzismatullayev36@gmail.com"}]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Uzbek",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "alembic==1.13.3",
    "bcrypt==4.1.3",
    "pyjwt==2.8.1",
    "python-multipart==0.0.6",
    "requests==2.32.3",
    "openai-whisper==20231214",
    "rapidfuzz==3.7.1",
    "python-dotenv==1.0.1",
    "gunicorn==22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "ruff==0.2.2",
    "mypy==1.8.0",
    "pylint==3.0.3",
]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
